--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
             <version>2.15.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -107,7 +114,7 @@
                 <version>3.2.1</version>
                 <configuration>
                     <includes>
-                        <include>target/test-classes/RunnerClasses/_04_RunnerForGroups.class</include>
+                        <include>**/_04_RunnerForGroups.class</include>
                     </includes>
                 </configuration>
             </plugin>
