--- a/pom.xml
+++ b/pom.xml
@@ -121,4 +121,42 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>SmokeTest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.1</version>
+                        <configuration>
+                            <includes>
+                                <include>**/_04_RunnerForGroups.class</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>FireTest</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.1</version>
+                        <configuration>
+                            <includes>
+                                <include>**/_09_RunnerForRegressionJenkins.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
